# gnome-transfers

./: Makefile.am  Readme  autogen.sh  configure.ac
src/: Makefile-js.am  Makefile.am  application.js  application.js~  embed.js  global.js  gnome-transfers.in  main.js  mainToolbar.js  mainWindow.js  sidebar.js  windowMode.js
